develop: Made modification with .env for deploying